resolve n+1